--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.11.0",
     "react-speech-recognition": "^3.10.0",
+    "regenerator-runtime": "^0.14.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
   }
